--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Document</title>
-	<link rel="stylesheet" href="./css/index.css">
-</head>
-<body>
-
-	<div id="list-panel">
-		<ul id="list">
-
-		</ul>
-	</div>
-	<div id="show-panel"></div>
-	<script type="text/javascript" src="./js/index.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Document</title>
+    <link rel="stylesheet" href="./css/index.css" />
+  </head>
+  <style>
+    li {
+      cursor: pointer;
+    }
+  </style>
+  <body>
+    <div id="list-panel">
+      <ul id="list"></ul>
+    </div>
+    <div id="show-panel"></div>
+    <script type="text/javascript" src="./js/index.js"></script>
+  </body>
 </html>
